--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -73,12 +73,12 @@
                 <h2 class="pt-2 pb-2">Visualizations</h2>
                 <hr>
                 <div class="row" >
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="temperature.html"><img class = "img img-responsive" src="images/Max Temperature vs City Latidute .png" style="width:100%" alt=""></a></div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="images/Humidity vs City Latitude.png" style="width:100%" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Max_Temp.html"><img class = "img img-responsive" src="images/Max Temperature vs City Latidute .png" style="width:100%" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Humidity.html"><img class = "img img-responsive" src="images/Humidity vs City Latitude.png" style="width:100%" alt=""></a></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="images/Cloudiness vs City Latitude.png" style="width:100%; border:3px solid rgb(96, 128, 143)" alt=""></a></div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="images/Windspeed vs City Latitude.png" style="width:100%" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Cloudiness.html"><img class = "img img-responsive" src="images/Cloudiness vs City Latitude.png" style="width:100%; border:3px solid rgb(96, 128, 143)" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Windspeed.html"><img class = "img img-responsive" src="images/Windspeed vs City Latitude.png" style="width:100%" alt=""></a></div>
                 </div>
                          
               </div>
