--- a/Comparison.html
+++ b/Comparison.html
@@ -17,7 +17,7 @@
   <!-- Top menu bar and menu options -->
   <body>
       <nav class="navbar navbar-dark bg-dark">
-          <a class="navbar-brand pl-4 pr-4" style='background-color: rgb(96, 128, 143);' href="./Landing.html">Weather Data Visualization</a>
+          <a class="navbar-brand pl-4 pr-4" style='background-color: rgb(96, 128, 143);' href="./index.html">Weather Data Visualization</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse offset-9" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="./Landing.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Comparison.html">Comparison</a>
