--- a/Max_Temp.html
+++ b/Max_Temp.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <!-- Top menu bar and menu options -->
   <body>
@@ -74,12 +74,12 @@
                 <h2 class="pt-2 pb-2">Visualizations</h2>
                 <hr>
                 <div class="row" >
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Max_Temp.html"><img class = "img img-responsive" src="images/Max Temperature vs City Latidute .png" style="width:100%; border:3px solid rgb(96, 128, 143)" alt=""></a></div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Humidity.html"><img class = "img img-responsive" src="images/Humidity vs City Latitude.png" style="width:100%" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Max_Temp.html"><img class = "img img-responsive plots" src="images/Max Temperature vs City Latidute .png" style="width:100%; border:3px solid rgb(96, 128, 143)" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Humidity.html"><img class = "img img-responsive plots" src="images/Humidity vs City Latitude.png" style="width:100%" alt=""></a></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Cloudiness.html"><img class = "img img-responsive" src="images/Cloudiness vs City Latitude.png" style="width:100%" alt=""></a></div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Windspeed.html"><img class = "img img-responsive" src="images/Windspeed vs City Latitude.png" style="width:100%" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Cloudiness.html"><img class = "img img-responsive plots" src="images/Cloudiness vs City Latitude.png" style="width:100%" alt=""></a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="./Windspeed.html"><img class = "img img-responsive plots" src="images/Windspeed vs City Latitude.png" style="width:100%" alt=""></a></div>
                 </div>
                          
               </div>
