--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <hr>
             <img src="images/Max Temperature vs City Latidute .png" style="width:65%;float: right;" 
             alt="Plot shows that the temperature is lower near the poles.">
-              <p class = "text">This is an analysis and visualization of weather of 700+ cities across the world. The main objective was to showcase the relationship of various factors like temperature, humidity, cloudiness and wind speed with respect to the distance from the equator. <br> 
-                For this analysis, approx. 2000 coordinate pairs of latitude and longitude were created randomly and then citypy (a python library) was used to generate city names for respective coordinates. 
-                After selecting unique non-repeat observations, a weather check was performed on each of the cities using a series of successive API calls from OpenWeatherMap. Then all different point of interests were plotted against latitude using Matplotlib.<br> 
+              <p class = "text">This website showcases results from a previous assignment which can be found in the Python-API repository. It includes Weather Data from 700+ cities across the world. Interactive plots were generated using plotly, matplotlib, and pandas to visualize the relationship of various factors like temperature, humidity, cloudiness and wind speed plotted against latitude.<br> 
+            
+              A weather check was performed on each of the cities using a series of successive API calls from OpenWeatherMap. Then plotted against latitude using Matplotlib.<br> 
                 </p>
                 <br>        
           </div>
